# cyberdog_nav2

./: .gitignore
algorithm_manager/: CMakeLists.txt  costmap_plugins.xml  package.xml
algorithm_manager/config/: AutoDock.toml  Executor.toml  Task.toml  UwbTracking.toml  VisionTracking.toml
algorithm_manager/include/algorithm_manager/: algorithm_task_manager.hpp  executor_ab_navigation.hpp  executor_auto_dock.hpp  executor_base.hpp  executor_factory.hpp  executor_laser_localization.hpp  executor_laser_mapping.hpp  executor_poses_through_navigation.hpp  executor_reset_nav.hpp  executor_uwb_tracking.hpp  executor_vision_localization.hpp  executor_vision_mapping.hpp  executor_vision_tracking.hpp  feedcode_type.hpp  global_pose_publisher.hpp  lifecycle_controller.hpp  lifecycle_node_manager.hpp  realsense_lifecycle_manager.hpp  service_client.hpp  timer.hpp  tracking_indication.hpp
algorithm_manager/include/plugins/: obstacle_layer.hpp
algorithm_manager/params/: nav2_application_params.yaml
algorithm_manager/plugins/: obstacle_layer.cpp
algorithm_manager/src/: algorithm_task_manager.cpp  executor_ab_navigation.cpp  executor_auto_dock.cpp  executor_base.cpp  executor_laser_localization.cpp  executor_laser_mapping.cpp  executor_poses_through_navigation.cpp  executor_uwb_tracking.cpp  executor_vision_localization.cpp  executor_vision_mapping.cpp  executor_vision_tracking.cpp  global_pose_publisher.cpp  led_manager.cpp  lifecycle_controller.cpp  lifecycle_node_manager.cpp  main.cpp  realsense_lifecycle_manager.cpp  timer.cpp  tracking_indication.cpp
algorithm_manager/test/: fake_action.cpp  fake_nav_send_goal.cpp  fake_nav_send_goal_action_test.cpp
cyberdog_autocharging/autocharging_server/: CMakeLists.txt  package.xml
cyberdog_autocharging/autocharging_server/src/: autocharging_server.cpp
cyberdog_emergency_stop/: CMakeLists.txt  package.xml
cyberdog_emergency_stop/config/: configuration.toml
cyberdog_emergency_stop/include/cyberdog_emergency_stop/: emergency_stop.hpp  thread_pool.hpp
cyberdog_emergency_stop/src/: emergency_stop.cpp  main.cpp
cyberdog_gridmap_costmap_plugin/: CMakeLists.txt
cyberdog_gridmap_costmap_plugin/include/cyberdog_gridmap_costmap_plugin/: gridmap_cotmap_plugin.hpp
cyberdog_gridmap_costmap_plugin/src/: gridmap_cotmap_plugin.cpp
cyberdog_lifecycle/: CMakeLists.txt  package.xml
cyberdog_lifecycle/include/cyberdog_lifecycle/: lifecycle_node.hpp  lifecycle_service_client.hpp  node_thread.hpp  node_utils.hpp  service_client.hpp
cyberdog_lifecycle/src/: lifecycle_node.cpp  lifecycle_service_client.cpp  node_thread.cpp  node_utils.cpp
cyberdog_lifecycle_manager/: CMakeLists.txt  package.xml
cyberdog_lifecycle_manager/include/cyberdog_lifecycle_manager/: lifecycle_manager.hpp  lifecycle_manager_client.hpp
cyberdog_lifecycle_manager/src/: lifecycle_manager.cpp  lifecycle_manager_client.cpp  main.cpp
cyberdog_maps_manager/: CMakeLists.txt  package.xml
cyberdog_maps_manager/src/: main.cpp  maps_manager.cpp  maps_protocol.cpp
cyberdog_maps_manager/test/: map_manager_test.cpp
cyberdog_rosbag_recorder/: CMakeLists.txt  package.xml
cyberdog_rosbag_recorder/config/: topics.toml
cyberdog_rosbag_recorder/launch/: rosbag_recorder.launch.py
cyberdog_rosbag_recorder/src/: main.cpp  rosbag_record.cpp
cyberdog_simulation/cyberdog_sim_bringup/: CMakeLists.txt  package.xml
map_label_server/: CMakeLists.txt  package.xml
map_label_server/src/: label_store.cpp  labelserver.cpp  labelserver_node.cpp
nav2_control_demo/: CMakeLists.txt  README.md  package.xml
nav2_control_demo/launch/: bringup_navigate_to_pose_launch.py  nav2_control_demo_bringup.launch.py  nav2_control_demo_mapping.launch.py  nav2_control_demo_navigate_to_pose.launch.py
nav2_control_demo/params/: localization.yaml  mapping.yaml  navigate_to_pose_params.yaml  recoveries_params.yaml
nav2_control_demo/src/: main.cpp  nav2_localization.cpp  nav2_mapping.cpp  nav2_navigatte_pose.cpp
navigation_bringup/: CMakeLists.txt  package.xml
navigation_bringup/config/: ekf.yaml
navigation_bringup/launch/: auto_dock.launch.py  camera.launch.py  nav2_bringup.py  navigation.launch.py  navigation2.launch.py  node.algorithm_manager.launch.py  node.camera_server.launch.py  node.charging_localization.launch.py  node.data.launch.py  node.elevation_mapping_odom.launch.py  node.emergency_stop.launch.py  node.head_tof_pc_publisher.launch.py  node.laser_localization.launch.py  node.laser_mapping.launch.py  node.lifecycle_mgr_laser_loc.launch.py  node.lifecycle_mgr_laser_mapping.launch.py  node.lifecycle_mgr_nav.launch.py  node.lifecycle_mgr_vis_loc.launch.py  node.map_label_server.launch.py  node.mcr_uwb.launch.py  node.mcr_voice.launch.py  node.miloc.launch.py  node.mivins_localization.launch.py  node.mivins_mapping.launch.py  node.mivins_vo.launch.py  node.nav2_base.launch.py  node.nav_dock_base.launch.py  node.navigation_interfaces.launch.py  node.occmap.launch.py  node.realsense.launch.py  node.realsense_align.launch.py  node.report_dog_pose.launch.py  node.rosbag_recorder.launch.py  node.seat_adjust_server.launch.py  node.stair_align.launch.py  node.state_publisher.launch.py  node.static_tf.launch.py  node.stereo_camera.launch.py  node.tracking.launch.py  node.tracking_base.launch.py  (+3 more)
navigation_bringup/params/: follow_params.yaml  map_saver_params.yaml  nav2_params.yaml
navigation_bringup/rviz/: nav2_config.rviz  urdf_config.rviz
navigation_bringup/test/: test_node.cpp
navigation_bringup/urdf/: static_tf.urdf  static_tf_map.urdf
navigation_core/cyberdog2_rviz2_plugin/: CMakeLists.txt  package.xml
navigation_core/cyberdog_gridmap_costmap_plugin/: gridmap_cost_layer.xml  package.xml
navigation_core/cyberdog_map_manager/: CMakeLists.txt  package.xml
navigation_core/map_label_server/: CMakeLists.txt  package.xml
navigation_core/navigation_bringup/: package.xml
navigation_core/navigation_interfaces/: CMakeLists.txt  package.xml
navigation_core/positionchecker/: CMakeLists.txt  package.xml
tracking_base/tracking_base/: CMakeLists.txt  README.md  package.xml
(+286 files in other folders)
