<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>algorithm_manager</name>
  <version>0.0.0</version>
  <description>the navigation interfaces for other module</description>
  <maintainer email="tianhonghai@xiaomi.com">tianhonghai</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav2_util</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_map_server</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>action_msgs</depend>
  <depend>protocol</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>cyberdog_common</depend>
  <depend>cyberdog_debug</depend>
  <depend>motion_action</depend>
  <depend>cyberdog_system</depend>
  <depend>mcr_msgs</depend>
  <depend>visualization</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
