<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cyberdog_lifecycle</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="duyongquan1@xiaomi.com">quan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>libboost-program-options-dev</build_depend>
  <depend>nav2_common</depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <!-- <depend>nav2_msgs</depend> -->
  <depend>lifecycle_msgs</depend>
  <depend>bondcpp</depend>
  <depend>bond</depend>
  <depend>test_msgs</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>launch</depend>
  <depend>launch_testing_ament_cmake</depend>

  <exec_depend>libboost-program-options</exec_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
