<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_control_demo</name>
  <version>0.0.0</version>
  <description>server for save and get map label</description>
  <maintainer email="duyongquan@xiaomi.com">duyongquan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend> 
  <depend>nav2_util</depend>
  <depend>nav2_msgs</depend>
  <depend>visualization</depend> 
  <depend>cyberdog_visions_interfaces</depend> 

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
