<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cyberdog_gridmap_costmap_plugin</name>
  <version>1.0.0</version>
  <description>Run-time plugin for grid map to Costmap2D layer</description>
  <maintainer email="duzhonghua@xiaomi.com">Du Zhonghua</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>  
  <depend>tf2_ros</depend>  
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>message_filters</depend> 
  <depend>grid_map_costmap_2d</depend>
  <export>
    <costmap_2d plugin="${prefix}/gridmap_cost_layer.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
