<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>map_label_server</name>
  <version>0.0.0</version>
  <description>server for save and get map label</description>
  <maintainer email="duzhonghua@xiaomi.com">duzhonghua</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>protocol</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>cyberdog_common</depend>
  <depend>nav2_map_server</depend>
  <depend>filesystem</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
