<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigation_bringup</name>
  <version>0.0.0</version>
  <description>The navigation bringup package</description>
  <license>Apache-2.0</license>

  <maintainer email="duzhonghua@xiaomi.com">Du ZHonghua</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
